--- a/style.css
+++ b/style.css
@@ -8,17 +8,87 @@ main {
    
 }
 .principal{
+    display: flex;
     width: 100%;
     text-align: center;
-    padding-top: 150px;
     background-color: azure;
     min-height: 100vh;
-    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .principal img{
     width: 250px;
 }
 .contactos{
-    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 30%;
+    border-right: solid 1px;
+}
+.contactos .contacto:hover{
+    display: flex;
+    min-height: 70px;
+    border: solid 1px ;
+    border-color: black;
+    padding: 15px;
+    background-color: blueviolet;
+    cursor: pointer;
+}
+.contactos .contacto img{
+    width: 60px;
+    border-radius: 30px;
+}
+.contactos .contacto .info{
+    text-align: left;
+    padding: 10px;
+    width: 300px;
+   
+}
+
+.nuevo-chat {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    min-height: 10vh;
+    border-color: black;
+    border-top: solid 10px;
+}
+
+.nuevo-chat .button {
+    padding: 10px;
+    background-color: blueviolet;
+    color: white;
+    border-radius: 10px ;
     
+}
+.contactos nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+
+}
+.contactos nav img{
+    width: 60px;
+    border-radius: 30px;
+}
+
+.contactos .perfil{
+    display: flex;
+    font-size: 12px;
+    align-items: center;
+}
+
+.contactos .perfil .info{
+   padding: 10px;
+}
+
+.contactos nav .items{
+    display: flex;
+    align-items: center;
+}
+
+.contactos nav .items i{
+    padding: 5px;
 }
